--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 class="subtitle">mesto za vašeg ljubimca</h2>
 
     <nav class="navbar navbar-expand-sm " >
-       <form class="form-inline" style="display: inline;">
+       <form class="form-inline"]>
            <div class="btn-group">
             <button class="dugme"> <a class="linkNavBar " href="#">Početna</a></button>
             <button class="dugme"><a class="linkNavBar" href="#">Pregled salona</a></button>
