--- a/pocetna_salon.html
+++ b/pocetna_salon.html
@@ -26,7 +26,7 @@
     <h2 class="subtitle">mesto za vašeg ljubimca</h2>
 
     <nav class="navbar navbar-expand-sm admin ">
-      <form class="form-inline" style="display: inline;">
+      <form class="form-inline">
         <div class="btn-group">
           <button class="dugme_admin_malo"> <a class="linkNavBar " href="#">Početna</a></button>
           <button class="dugme_admin"><a class="linkNavBar" href="#">Pregled salona</a></button>
