--- a/index.html
+++ b/index.html
@@ -1,87 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>GroomRoom</title>
-    <link rel="icon" href="images/icon.png?v=2">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Sacramento&family=Spline+Sans+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-  <div class="header">
-    <img class="logo" src="images/logo3.png">
+      <title>GroomRoom</title>
+      <link rel="icon" href="images/icon.png?v=2">
+      <link rel="stylesheet" href="css/style.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Sacramento&family=Spline+Sans+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <div class="header">
+      <img class="logo" src="images/logo3.png">
 
-    <h1 class="title">Groom Room</h1>
+      <h1 class="title">Groom Room</h1>
 
-    <h2 class="subtitle">mesto za vašeg ljubimca</h2>
+      <h2 class="subtitle">mesto za vašeg ljubimca</h2>
 
-    <nav class="navbar navbar-expand-sm " >
-       <form class="form-inline">
-           <div class="btn-group">
-            <button class="dugme"> <a class="linkNavBar " href="#">Početna</a></button>
-            <button class="dugme"><a class="linkNavBar" href="#">Pregled salona</a></button>
-            <button class="dugme"><a class="linkNavBar" href="#">Pregled usluga</a></button>
-            <button class="dugme"><a class="linkNavBar" href="#">Registracija</a></button>
-            <button class="dugme"><a class="linkNavBar" href="#">Login</a></button>
-           </div>
-       </form>
-    </nav>
-  </div>
+      <nav class="navbar navbar-expand-sm " >
+         <form class="form-inline">
+             <div class="btn-group">
+              <button class="dugme"> <a class="linkNavBar " href="#">Početna</a></button>
+              <button class="dugme"><a class="linkNavBar" href="#">Pregled salona</a></button>
+              <button class="dugme"><a class="linkNavBar" href="#">Pregled usluga</a></button>
+              <button class="dugme"><a class="linkNavBar" href="#">Registracija</a></button>
+              <button class="dugme"><a class="linkNavBar" href="#">Login</a></button>
+             </div>
+         </form>
+      </nav>
+    </div>
 
-  <div class="sredina">
-    <h2 class="subtitle">Dobrodošli u GroomRoom!</h2>
-    <p class="flavor_text"> Naš cilj je da Vam omogućimo efikasan način za sređivanje Vašeg kućnog ljubimca!
-      <br>
-      Zakažite termin u salonu po vašem izboru danas!
-    </p>
+    <div class="sredina">
+      <h2 class="subtitle">Dobrodošli u GroomRoom!</h2>
+      <p class="flavor_text"> Naš cilj je da Vam omogućimo efikasan način za sređivanje Vašeg kućnog ljubimca!
+        <br>
+        Zakažite termin u salonu po vašem izboru danas!
+      </p>
+      <hr class="linija">
+
+      <h2 class="subtitle">Naši saloni</h2>
+      <p class="flavor_text">Šta god da Vašem psu treba, naši saloni obezbeđuju!
+        <br>
+        Imamo najveći izbor salona, sa najkvalitetnijom uslugom!
+      </p>
+      <hr class="linija">
+
+      <h2 class="subtitle">Preporučeni saloni</h2>
+      <p class="flavor_text">Izaberite jedan od salona iz naše preporuke!
+      </p>
+    </div>
+
+
+    <div class="scrollmenu">
+      <img class="salon_slika" src="images/salon1.png">
+      <img class="salon_slika" src="images/salon2.png">
+      <img class="salon_slika" src="images/salon3.png">
+      <img class="salon_slika" src="images/salon4.png">
+      <img class="salon_slika" src="images/salon5.png">
+      <img class="salon_slika" src="images/salon6.png">
+      <img class="salon_slika" src="images/salon7.png">
+      <img class="salon_slika" src="images/salon8.png">
+    </div>
+    <br>
+    <br><br>
     <hr class="linija">
 
-    <h2 class="subtitle">Naši saloni</h2>
-    <p class="flavor_text">Šta god da Vašem psu treba, naši saloni obezbeđuju!
-      <br>
-      Imamo najveći izbor salona, sa najkvalitetnijom uslugom!
-    </p>
-    <hr class="linija">
+    <div class="Kontakt">
+      <h2 class="subtitle">Kontaktirajte nas!</h2>
+      <a href="mailto:groomroom@email.com"><button type="button" class="button">KONTAKT</button></a>
+    </div>
 
-    <h2 class="subtitle">Preporučeni saloni</h2>
-    <p class="flavor_text">Izaberite jedan od salona iz naše preporuke!
-    </p>
-  </div>
-
-
-  <div class="scrollmenu">
-    <img class="salon_slika" src="images/salon1.png">
-    <img class="salon_slika" src="images/salon2.png">
-    <img class="salon_slika" src="images/salon3.png">
-    <img class="salon_slika" src="images/salon4.png">
-    <img class="salon_slika" src="images/salon5.png">
-    <img class="salon_slika" src="images/salon6.png">
-    <img class="salon_slika" src="images/salon7.png">
-    <img class="salon_slika" src="images/salon8.png">
-  </div>
-  <br>
-  <br><br>
-  <hr class="linija">
-
-  <div class="Kontakt">
-    <h2 class="subtitle">Kontaktirajte nas!</h2>
-    <a href="mailto:groomroom@email.com"><button type="button" class="button">KONTAKT</button></a>
-  </div>
-
-  <div class="footer">
-    <a href="https://www.facebook.com/"><img class="socials" src="images/facebook.png" ></a>
-    <a href="https://www.instagram.com/"><img class= "socials" src="images/instagram.png"></a>
-    <a href="https://twitter.com/kanyewest"><img class="socials" src="images/twitter.png"></a>
-    <p class="copyright">© 2022 GroomRoom. All rights reserved.</p>
-  </div>
+    <div class="footer">
+      <a href="https://www.facebook.com/"><img class="socials" src="images/facebook.png" ></a>
+      <a href="https://www.instagram.com/"><img class= "socials" src="images/instagram.png"></a>
+      <a href="https://twitter.com/kanyewest"><img class="socials" src="images/twitter.png"></a>
+      <p class="copyright">© 2022 GroomRoom. All rights reserved.</p>
+    </div>
 
 
-</body>
+  </body>
+</html>  
